Fix month alignment issue

--- a/Heatmap/Heatmap/Heatmap.css
+++ b/Heatmap/Heatmap/Heatmap.css
@@ -66,7 +66,7 @@
 	visibility: hidden;
 }
 
-.heatmap:not(.segment_years) > .months > .month:not(:first-child) {
+.heatmap.year:not(.segment_years) > .months > .month:not(:first-child) {
     margin-left: calc(0px - var(--day-size) - var(--day-gap));
 }
 
@@ -74,7 +74,7 @@
 	margin-left: calc(var(--day-size) + var(--day-gap));
 }
 
-.heatmap:not(.segment_years) .month:not(:first-child).offset-0 {
+.heatmap.year:not(.segment_years) .month:not(:first-child).offset-0 {
 	margin-left: 0;
 }
 
